--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@ project(cpp02)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(ex00 ex00/main.cpp
-		ex00/Fixed.cpp
-		ex00/Fixed.h)
+		ex00/Fixed.cpp)
 
 add_executable(ex01 ex01/main.cpp
-		ex01/main.cpp
 		ex01/Fixed.cpp)
+
+add_executable(ex02 ex02/main.cpp
+		ex02/Fixed.cpp)
