--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,10 @@ add_executable(ex01 ex01/main.cpp
 
 add_executable(ex02 ex02/main.cpp
 		ex02/Fixed.cpp)
+
+add_executable(ex03
+		ex03/Fixed.cpp
+		ex03/main.cpp
+		ex03/Point.cpp
+		ex03/Point.h
+		ex03/bsp.cpp)
