--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -11,7 +11,7 @@
 # **************************************************************************** #
 
 #--------------------------------------------------------------------Executable
-NAME	:= ex01
+NAME	:= ex03
 
 #----------------------------------------------------------------------Compiler
 CC 		=  c++
@@ -28,7 +28,9 @@ HEADER	=        Fixed.h
 
 #------------------------------------------------------------------------Source
 SRC	:= main.cpp \
-       Fixed.cpp
+       Fixed.cpp \
+       Point.cpp \
+       bsp.cpp
 
 #-----------------------------------------------------------------------Objects
 OBJS	:= ${SRC:.cpp=.o}
@@ -49,7 +51,7 @@ $(OBJ_DIR)%.o : %.cpp $(HEADER)
 
 $(NAME): $(OBJECTS_PREFIXED)
 	@$(CC) $(OBJECTS_PREFIXED) -o $(NAME)
-	@echo "ex01 is ready!"
+	@echo "ex03 is ready!"
 
 clean:
 	@rm -rf $(OBJ_DIR)
